# pa-decarvalho

./: .editorconfig  .gitignore  .gitpod.yml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  taskfile.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pages.yml
.gitpod/: Dockerfile  automations.yaml
.taskfiles/: update.yml
assets/badges/: cv.json
