[project]
name = "pa-decarvalho"
version = "0.0.0"
description = ""
authors = [
    { name = "Philippe-André De Carvalho", email = "philippe.andre.decarvalho@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-curriculum-vitae (>=0.11.0,<1.0.0)",
]

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
